--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -51,8 +51,8 @@
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:7012" />-->
     <add key="JWT_EXPIRE_MINUTES" value="30" />
     <add key="version" value="1.0.2.1" />
-    <add key="Disponible" value="1" /> <!--Neoteck-->
-    <!--<add key="Disponible" value="http://sagasapi.ddns.net:7012/" />-->
+    <!--<add key="Disponible" value="1" /> --><!--Neoteck-->
+    <add key="Disponible" value="http://sagasapi.ddns.net:7012/" />
     <add key="gmg" value="api/seguridad/disponible" />
 
     <!--GENERAR JWT TOKEN-->
