--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -36,18 +36,22 @@
         android:supportsRtl="true"
         android:theme="@style/SagasTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".PictureActivity"></activity>
+        <activity
+            android:name=".Activity.BuscarTicketActivity"
+            android:configChanges="orientation"
+            android:label="Ventas realizadas"
+            android:theme="@style/AppEnter"/>
+        <activity android:name=".Activity.Main2Activity" />
+        <activity android:name=".PictureActivity" />
         <activity
             android:name=".Activity.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/SagasTheme">
-
-        </activity>
+            android:theme="@style/SagasTheme" />
         <activity
             android:name=".Activity.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/SagasTheme" >
+            android:theme="@style/SagasTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -101,11 +105,7 @@
             android:configChanges="orientation"
             android:label="@string/title_proceso_descarga"
             android:screenOrientation="portrait"
-            android:theme="@style/AppEnter" >
-
-        </activity>
-
-
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.SubirImagenesActivity"
             android:configChanges="orientation"
