Avance de ajustes finales

--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -283,6 +283,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\sysdiagrams.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\TipoCentroCosto.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
