--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -201,6 +201,7 @@
     <Compile Include="DTOs\Seguridad\UsuariosModel.cs" />
     <Compile Include="DTOs\Ventas\CorteCajaDTO.cs" />
     <Compile Include="DTOs\Ventas\VentaCajaGeneralDTO.cs" />
+    <Compile Include="DTOs\Ventas\VentaReImpresion.cs" />
     <Compile Include="Servicios\Catalogos\CuentaContableAutorizadoServicio.cs" />
     <Compile Include="Servicios\Equipo\CalculosEquipoTrasporte.cs" />
     <Compile Include="DTOs\EquipoTransporte\MantenimientoDetalleDTO.cs" />
