Ultimos ajustes SAGAS

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11780,6 +11780,7 @@
     <Content Include="Views\Home\Mantenimiento.cshtml" />
     <Content Include="Views\CajaGeneral\EdicionTickets.cshtml" />
     <Content Include="Views\CajaGeneral\_Detalles.cshtml" />
+    <Content Include="Views\Pedidos\_DatosClenteDomicilioPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
