--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -10,17 +10,12 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DS.MainModule-20180716112358.mdf;Initial Catalog=aspnet-DS.MainModule-20180716112358;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework" />-->
-
-    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />-->
-
-    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />--> 
-
-    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />
+    <!--Nube gmg-->
+    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />
+    <!--Local-->
+    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />-->
   </connectionStrings>
   <appSettings>
     <!--URL del WebApp-->
@@ -50,7 +45,7 @@
     <!--<add key="JWT_AUDIENCE_TOKEN" value="http://localhost:7012" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:7012" />-->
     <add key="JWT_EXPIRE_MINUTES" value="30" />
-    <add key="version" value="1.0.2.3" />
+    <add key="version" value="1.0.3.0" />
     <add key="DisponibleNTK" value="1" /> <!--Neoteck-->
     <add key="Disponible" value="http://sagasapi.ddns.net:7012/" />
     <add key="gmg" value="api/seguridad/servicio/disponible" />
